added remaining balancers