@@ -8,22 +8,23 @@ import org.slf4j.LoggerFactory;
 import util.Constants;
 
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+// TODO: TEST THIS ONE
+public class OverlapBalancer extends Balancer {
 
-public class UniformBalancer extends Balancer {
-
-    private static final Logger logger = LoggerFactory.getLogger(UniformBalancer.class);
+    private static final Logger logger = LoggerFactory.getLogger(OverlapBalancer.class);
 
     private int validSongCount;
 
-    public UniformBalancer() {
+    public OverlapBalancer() {
         super();
     }
 
     @Override
     public Balancers.type getType() {
-        return Balancers.type.UNIFORM;
+        return Balancers.type.OVERLAP;
     }
 
     @Override
@@ -33,15 +34,15 @@ public class UniformBalancer extends Balancer {
         }
 
 
-        List<Long> themeList = Stream.concat(
-                users.stream().map(user -> user.getMalIds(Constants.myanimelist.status.completed.toString())).flatMap(Set::stream),
-                users.stream().map(user -> user.getMalIds(Constants.myanimelist.status.watching.toString())).flatMap(Set::stream)
-        )
-                .filter(id -> filter.isValidAnime(id))
-                .flatMap(id -> animeBank.get(id).getThemeSet().stream())
-                .filter(id -> filter.isValidTheme(id))
-                .collect(Collectors.toList());
-
+        List<Long> themeList = new ArrayList(overlap(users.stream().map(user -> Stream.concat(
+                    user.getMalIds(Constants.myanimelist.status.completed.toString()).stream(),
+                    user.getMalIds(Constants.myanimelist.status.watching.toString()).stream()
+                ).filter(id -> filter.isValidAnime(id))
+                .map(id -> animeBank.get(id).getThemeSet().stream()
+                        .filter(themeId -> filter.isValidTheme(themeId)).collect(Collectors.toSet()))
+                .flatMap(Set::stream)
+                .toList())
+                .toList()));
 
         if (themeList.size() == 0) {
             throw new Exception("Could not find any songs matching your filters! Try adjusting them or adding more users.");
@@ -64,5 +65,16 @@ public class UniformBalancer extends Balancer {
     @Override
     public int getValidSongCount() {
         return this.validSongCount;
+    }
+
+    private static <T> Set<T> overlap(Collection<? extends Collection<T>> collections) {
+        if (collections.isEmpty()) return Collections.emptySet();
+
+        return collections.stream().flatMap(Collection::stream)
+                .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()))
+                .entrySet().stream()
+                .filter(entry -> entry.getValue() > 1)
+                .map(Map.Entry::getKey)
+                .collect(Collectors.toSet());
     }
 }
